# noah

./: .dockerignore  .gitignore  Cargo.Dockerpatch  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile  PROTOCOL.md  README.md  package-lock.json  package.json  rust-toolchain  rustfmt.toml  setup-hooks.sh  shell.nix
accumulators/: Cargo.toml
accumulators/src/: errors.rs  lib.rs  merkle_tree.rs
accumulators/tests/: merkle_tree.rs
algebra/: Cargo.toml
algebra/benches/: msm.rs
algebra/src/: bls12_381.rs  bn.rs  bs257.rs  canaan.rs  errors.rs  groups.rs  jubjub.rs  lib.rs  multi_exp.rs  pairing.rs  prelude.rs  rand_helper.rs  ristretto.rs  secp256k1.rs  secq256k1.rs  serialization.rs  traits.rs  utils.rs
algebra/src/baby_jubjub/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/bls12_381/: fastmsm.wasm  fq.rs  fr.rs  g1.rs  g2.rs  gt.rs  mod.rs  pairing.rs  submission.wasm
algebra/src/bn254/: fq.rs  fr.rs  g1.rs  g2.rs  gt.rs  mod.rs  pairing.rs
algebra/src/curve25519/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/ed25519/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/jubjub/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/ristretto/: mod.rs
algebra/src/secp256k1/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/secq256k1/: fq.rs  fr.rs  g1.rs  mod.rs
algebra/src/zorro/: fq.rs  fr.rs  g1.rs  mod.rs
api/: Cargo.toml
api/benches/: anemoi.rs  anon_xfr.rs  bulletproofs.rs  merkle_tree.rs  xfr.rs
api/src/: anon_creds.rs  errors.rs  gen-params.rs  keys.rs  lib.rs  parameters.rs  serialization.rs  setup.rs
api/src/anon_xfr/: abar_to_abar.rs  abar_to_ar.rs  abar_to_bar.rs  address_folding.rs  address_folding_ed25519.rs  address_folding_secp256k1.rs  anon_fee.rs  anonymous_to_confidential.rs  anonymous_to_transparent.rs  anonymous_transfer.rs  ar_to_abar.rs  bar_to_abar.rs  circuits.rs  confidential_to_anonymous.rs  config.rs  keys.rs  merkle_tree_test.rs  mod.rs  ownership.rs  proofs.rs  structs.rs  transparent_to_anonymous.rs
api/src/api/: anon_creds.rs  bls_sig.rs
api/src/nextgen/: ar_to_nabar.rs  mod.rs  nabar_or_abar_to_nabar.rs  nabar_to_ar.rs  structs.rs
api/src/parameters/: bulletproofs.rs  mod.rs  params.rs  setup.rs
api/src/primitives/: asymmetric_encryption.rs  mod.rs
api/src/t_anon_xfr/: ar_to_tabar.rs  mod.rs  structs.rs  tabar_to_ar.rs  tabar_to_tabar.rs
api/src/xfr/: asset_mixer.rs  asset_record.rs  asset_tracer.rs  lib.rs  mod.rs  proofs.rs  sig.rs  structs.rs  test_utils.rs  tests.rs
api/tests/: abar_merkle_tree.rs  merkle_tree_test.rs  smoke_axfr.rs  smoke_axfr_secp256k1_address.rs  smoke_xfr.rs  smoke_xfr_compatibility.rs  smoke_xfr_identity.rs  smoke_xfr_secp256k1_address.rs  smoke_xfr_tracing.rs  workflows_examples.rs  workflows_xfr.rs  xfr_note_complex.rs  xfr_smoke.rs
bench-utils/: Cargo.toml
bench-utils/src/: lib.rs
bench-utils/src/api/: mod.rs  xfr.rs
crypto/: Cargo.toml  NOTICE
crypto/benches/: hashing.rs
crypto/src/: anon_creds.rs  bp_range_proofs.rs  chaum_pedersen.rs  conf_cred_reveal.rs  confidential_anon_creds.rs  delegated_chaum_pedersen.rs  delegated_schnorr.rs  dlog.rs  elgamal.rs  errors.rs  field_simulation.rs  group_signatures.rs  hybrid_encryption.rs  inner_product_pairing.rs  lib.rs  matrix_sigma.rs  pc_eq_groups.rs  pc_eq_rescue_split_verifier_zk_part.rs  pc_eq_rescue_zk_part.rs  pedersen_elgamal.rs  ristretto_pedersen.rs  sigma.rs  solvency.rs  whitelist.rs
crypto/src/anemoi_jive/: bls12_381.rs  bls12_381_deprecated.rs  bn254.rs  mds.rs  mod.rs  salts.rs  tests.rs  traces.rs
crypto/src/basic/: anemoi_jive.rs  chaum_pedersen.rs  elgamal.rs  hybrid_encryption.rs  jive.rs  matrix_sigma.rs  mod.rs  pedersen_comm.rs  pedersen_elgamal.rs  rescue.rs  ristretto_pedersen_comm.rs  schnorr.rs  schnorr_signature.rs
crypto/src/basics/: chaum_pedersen.rs  commitment.rs  elgamal.rs  hybrid_encryption.rs  matrix_sigma.rs  mod.rs  pedersen_elgamal.rs  prf.rs  rescue.rs  ristretto_pedersen_comm.rs  schnorr.rs  sigma.rs
crypto/src/bp_circuits/: array_inclusion.rs  cloak.rs  gadgets.rs  merkle_path.rs  mimc_hash.rs  mod.rs  range_proofs.rs  solvency.rs
crypto/src/bulletproofs/: cloak.rs  mix.rs  mod.rs  range.rs  scalar_mul.rs  scalar_mul_for_ed25519.rs  scalar_mul_for_secp256k1.rs
crypto/src/doubly_snark_friendly/: ecies_encryption.rs  mod.rs  schnorr_signature.rs
crypto/src/field_simulation/: bls12_381.rs  bn254.rs  fr.rs  fr_mul.rs  mod.rs
crypto/src/gapdh/: hoisting.rs  mod.rs  standard.rs
crypto/src/hashing_to_the_curve/: ed25519_elligator.rs  ed25519_sswu_wb.rs  ed25519_sw.rs  mod.rs  secp256k1_sswu_wb.rs  secp256k1_sw.rs  traits.rs
crypto/src/merkle_tree/: binary_merkle_tree.rs  k_ary_merkle_tree.rs  mod.rs
crypto/src/schnorr_gadgets/: gadget1_square.rs  gadget2_crossed_mul.rs  gadget3_move.rs  (+2 more)
native/: Cargo.toml  README.md
native/bulletproofs/: Cargo.toml
native/src/: lib.rs
plonk/: Cargo.toml  build.rs
plonk/benches/: fft.rs  verifier.rs
plonk/src/: errors.rs  lib.rs  utils.rs
poly-iops/: Cargo.toml
poly-iops/src/: lib.rs  plonk.rs  utils.rs
poly-iops/test_data/: kzg_public_params_bls_size_4100.params
smoke-tests/: Cargo.toml
utilities/: Cargo.toml
utilities/src/: bench.rs  examples.rs  lib.rs  xfr_bench.rs  xfr_building_utilities.rs
utils/: Cargo.toml
utils/src/: errors.rs  lib.rs  macros.rs  serialization.rs
zei_api/: Cargo.toml
zei_api/benches/: xfr_body_idtracking_assettracking_singleasset_cycles.rs  xfr_body_idtracking_assettracking_singleasset_time.rs  xfr_note_batch_cycles.rs  xfr_note_batch_time.rs  xfr_note_idtracking_assettracking_multiasset_cycles.rs  xfr_note_idtracking_assettracking_multiasset_time.rs  xfr_note_idtracking_assettracking_singleasset_cycles.rs  xfr_note_idtracking_assettracking_singleasset_time.rs  xfr_note_idtracking_noassettracking_singleasset_cycles.rs  xfr_note_idtracking_noassettracking_singleasset_time.rs  xfr_note_noidtracking_noassettracking_singleasset_cycles.rs  xfr_note_noidtracking_noassettracking_singleasset_time.rs
zei_api/src/: lib.rs  parameters.rs  serialization.rs  setup.rs
zei_api/tests/: workflows_examples.rs  xfr_note_complex.rs
(+321 files in other folders)
