[workspace]
members = [
 "accumulators",
 "algebra",
 "crypto",
 "plonk",
 "api",
 "smoke-tests"
]
resolver = "2"

[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-std = { git = "https://github.com/arkworks-rs/std", branch = "release-0.4" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-secp256k1 = { git = "https://github.com/arkworks-rs/curves" }
ark-secq256k1 = { git = "https://github.com/arkworks-rs/curves" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = true
debug = true