[package]
name = 'noah-accumulators'
version = '0.4.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
license = 'BUSL-1.1'
description = 'Noah accumulators commons'

[lib]
name = 'noah_accumulators'
crate-type = ['rlib']

[dependencies]
itertools = '0.10.5'
ruc = '1.0'
parking_lot = '0.12'

[dependencies.noah-algebra]
version = "0.4.0"

[dependencies.noah-crypto]
version = "0.4.0"

[dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.4'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.4'
