[package]
name = 'noah-accumulators'
version = '0.4.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Noah accumulators commons'

[lib]
name = 'noah_accumulators'
crate-type = ['rlib']

[dependencies]
itertools = '0.10.5'
ruc = '1.0'
parking_lot = '0.12'

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.noah-crypto]
path = '../crypto'

[dependencies.storage]
git = 'https://github.com/harshadptl/storage.git'
branch = 'msm_test'

[dev-dependencies.mem_db]
git = 'https://github.com/harshadptl/storage.git'
branch = 'msm_test'
