[package]
name = 'noah-accumulators'
version = '0.5.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Noah accumulators commons'

[lib]
name = 'noah_accumulators'
crate-type = ['rlib']

[dependencies]
itertools = '0.11.0'
ruc = '1.0'
parking_lot = '0.12'

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.noah-crypto]
path = '../crypto'

[dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.8'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.6'
