[[bench]]
name = 'msm'
path = 'benches/msm.rs'
harness = false

[package]
name = 'zei-algebra'
description = 'Zei algebra library'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'

[lib]
name = 'zei_algebra'
crate-type = ['rlib']

[dependencies]
base64 = "0.13"
bulletproofs = "2.0"
digest = '0.10'
itertools = '0.10.0'
ruc = '1.0'
serde = '1.0'
x25519-dalek = '1.1'
rayon = { version = "1", optional = true }

[dependencies.byteorder]
version = '^1.2.3'
default-features = false
features = ['i128']

[dependencies.curve25519-dalek]
version = '3.0.0'
features = ['serde']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.ark-ed-on-bls12-381]
version = '^0.3.0'
default-features = false

[dependencies.ark-bls12-381]
version = '^0.3.0'
default-features = false
features = ['curve']

[dependencies.ark-ec]
version = '^0.3.0'
default-features = false

[dependencies.ark-ff]
version = '^0.3.0'
default-features = false
features = ['asm']

[dependencies.ark-std]
version = '^0.3.0'
default-features = false

[dependencies.ark-serialize]
version = '^0.3.0'
default-features = false

[dependencies.rand_chacha]
version = '0.3'
default-features = false

[dependencies.num-bigint]
version = '0.4'

[dependencies.num-traits]
version = "0.2"

[dependencies.num-integer]
version = "0.1"

[dependencies.bulletproofs-canaan]
git = "https://github.com/FindoraNetwork/bulletproofs-canaan"
default-features = false
features = ['yoloproofs']

[features]
default = [
    'std',
    'u64_backend',
]
std = [
    'curve25519-dalek/std',
    'ark-ed-on-bls12-381/std',
    'ark-bls12-381/std',
    'ark-ec/std',
    'ark-std/std',
    'ark-ff/std',
    'ark-serialize/std',
    'bulletproofs-canaan/std'
]
alloc = ['curve25519-dalek/alloc']
nightly = ['curve25519-dalek/nightly']
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
parallel = [
    'rayon',
    'ark-ec/parallel',
    'ark-ff/parallel',
    'bulletproofs-canaan/parallel'
]
asm = ['ark-ff/asm']
