[[bin]]
name = 'gen-params'
path = 'src/gen-params.rs'
required-features = ['gen']

[package]
name = 'zei'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Zei Platform Interface'

[lib]
name = 'zei'
crate-type = ['rlib']

[dependencies]
aes = '0.8.1'
aes-gcm = '=0.10.0-pre'
bincode = '1.3.1'
bulletproofs = "2.0"
digest = '0.10'
ed25519-dalek = '1.0.0'
lazy_static = "1.4.0"
linear-map = '1.2.0'
merlin = '3.0'
rand_chacha = '0.3'
rmp-serde = '1.0.0'
ruc = '1.0'
serde = '1.0'
serde_derive = '1.0'
serde_str = '0.1.0'
sha2 = '0.10'

[dependencies.zei-algebra]
path = '../algebra'

[dependencies.zei-crypto]
path = '../crypto'

[dependencies.zei-plonk]
path = '../plonk'

[dependencies.curve25519-dalek]
version = '3.0.0'
features = ['serde']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.rayon]
version = '1'
optional = true

[dependencies.structopt]
version = '0.3.26'
optional = true

[dev-dependencies]
bit-array = '0.4.3'
criterion = '0.3.1'
lazy_static = '1.4.0'
serde_json = '1.0'
typenum = '1.11.2'
parking_lot = '0.12'

[dev-dependencies.zei-accumulators]
path = '../accumulators'

[dev-dependencies.rand]
version = '0.8'
default-features = false

[dev-dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
branch = 'feat-evm-stack'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
branch = 'feat-evm-stack'

[features]
default = [
    'std',
    'u64_backend',
]
std = ['curve25519-dalek/std']
alloc = ['curve25519-dalek/alloc']
nightly = [
    'curve25519-dalek/nightly',
    'rand/nightly',
]
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
asm = ['zei-algebra/asm']
no_urs = []
no_srs = []
no_vk = []
parallel = [
    'default',
    'rayon',
    'zei-algebra/parallel',
]
gen = ["parallel", "structopt"]
lightweight = [] # Minimize size for only AR2ABAR and ABAR2AR.
