[[bin]]
name = 'gen-params'
path = 'src/gen-params.rs'
required-features = ['gen']

[[bench]]
name = 'bulletproofs'
path = 'benches/bulletproofs.rs'
harness = false

[[bench]]
name = 'xfr'
path = 'benches/xfr.rs'
harness = false

[[bench]]
name = 'anon_xfr'
path = 'benches/anon_xfr.rs'
harness = false

[package]
name = 'zei'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Zei Platform Interface'

[lib]
name = 'zei'
crate-type = ['rlib']

[dependencies]
aes = '0.8.1'
aes-gcm = '=0.10.0-pre'
bincode = '1.3.1'
bulletproofs = "2.0"
digest = '0.10'
ed25519-dalek = '1.0.0'
lazy_static = "1.4.0"
libsecp256k1 = '0.7'
linear-map = '1.2.0'
merlin = '3.0'
rand_chacha = '0.3'
rmp-serde = '1.0.0'
ruc = '1.0'
serde = '1.0'
serde_derive = '1.0'
serde_str = '0.1.0'
sha2 = '0.10'
sha3 = '0.10'

[dependencies.ark-serialize]
version = '^0.3.0'
default-features = false

[dependencies.zei-algebra]
path = '../algebra'

[dependencies.zei-crypto]
path = '../crypto'

[dependencies.zei-plonk]
path = '../plonk'

[dependencies.curve25519-dalek]
version = '3.0.0'
features = ['serde']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.structopt]
version = '0.3.26'
optional = true

[dev-dependencies]
bit-array = '0.4.3'
criterion = '0.4.0'
hex = '0.4'
lazy_static = '1.4.0'
serde_json = '1.0'
typenum = '1.11.2'
parking_lot = '0.12'

[dev-dependencies.ark-std]
version = '^0.3.0'
default-features = false

[dev-dependencies.zei-accumulators]
path = '../accumulators'

[dev-dependencies.rand]
version = '0.8'
default-features = false

[dev-dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v0.2.2'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v0.2.2'

[dependencies.ark-bulletproofs-secq256k1]
git = "https://github.com/FindoraNetwork/ark-bulletproofs-secq256k1"
default-features = false
features = ["yoloproofs"]

[features]
default = [
    'std',
    'u64_backend',
]
debug = [ 'zei-plonk/debug' ]
std = ['curve25519-dalek/std', 'bulletproofs/std', 'ark-bulletproofs-secq256k1/std', 'ark-std/std']
alloc = ['curve25519-dalek/alloc']
nightly = [
    'curve25519-dalek/nightly',
    'rand/nightly',
]
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
asm = ['zei-algebra/asm']
no_urs = []
no_srs = []
no_vk = []
parallel = [
    'default',
    'rayon',
    'zei-algebra/parallel',
    'zei-plonk/parallel'
]
gen = ["parallel", "structopt"]
lightweight = [] # Minimize size for only AR2ABAR and ABAR2AR.
