[package]
name = "bench-utils"
version = "0.1.4"
authors = ["Findora <engineering@findora.org>"]
edition = "2018"
description = "Zei utilities for benchmarking"

[dependencies]
zei = { path = "../zei_api" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false }
rand_chacha = "0.2"
criterion = "0.3.1"
itertools = "0.8.0"
ruc = "1.0"
