[package]
name = "crypto"
version = "0.1.4"
authors = ["Findora <engineering@findora.org>"]
edition = "2021"
description = "Zei Cryptographic Primitives and Protocols"

[lib]
name = "crypto"
crate-type = ["rlib"]

[dependencies]
aes = { version = "0.7.5", features = ["ctr"]}
algebra = { path = "../algebra" }
bulletproofs = { package = "bulletproofs", git = "https://github.com/FindoraNetwork/bp", branch = "batch_verification", features = ["yoloproofs"] }
curve25519-dalek = { version =  "3.0.0", features = ["serde"] }
digest = "0.9"
ed25519-dalek = "1.0.0"
itertools = "0.8.0"
merlin = "3.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false }
rand_chacha = "0.2"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.9.0"
utils = {path = "../utils" }
x25519-dalek = "1.1"
ruc = "1.0"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
num-integer = { version = "0.1.43" }
num-traits = { version = "0.2.12" }
num-bigint = { version = "0.3.0", features = ["rand"] }

[dev-dependencies]
bit-array = "0.4.3"
lazy_static = "1.4.0"
rmp-serde = "0.13.7"
serde_json = "1.0"
typenum = "1.11.2"

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]
nightly = ["curve25519-dalek/nightly", "rand/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
