[package]
name = 'noah-crypto'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Noah Cryptographic Primitives and Protocols'

[lib]
name = 'noah_crypto'
crate-type = ['rlib']

[dependencies]
aes = '0.8.1'
bulletproofs = { git = "https://github.com/FindoraNetwork/bp", tag = "v1.0.2-f"  }
ctr = '0.9.1'
digest = '0.10'
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek", tag = "v1.0.1-f" }
itertools = '0.10.3'
merlin = '3.0'
rand_chacha = '0.3'
serde = '1.0'
serde_derive = '1.0'
sha2 = '0.10'
x25519-dalek = { git = "https://github.com/FindoraNetwork/x25519-dalek", tag = "2.0.0-pre.1" }
ruc = '1.0'
sha3 = { version = "0.10", default-features = false }

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.curve25519-dalek]
git = "https://github.com/FindoraNetwork/curve25519-dalek"
tag = "v3.2.0-f"
features = ['serde']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.rand]
version = '0.8'
default-features = false

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.ark-ec]
version = '^0.3.0'
default-features = false

[dependencies.ark-ff]
version = '^0.3.0'
default-features = false
features = ['asm']

[dependencies.ark-bulletproofs-secq256k1]
git = "https://github.com/FindoraNetwork/ark-bulletproofs-secq256k1"
default-features = false
features = ["yoloproofs"]

[dev-dependencies]
bit-array = '0.4.3'
lazy_static = '1.4.0'
rmp-serde = '1.0.0'
serde_json = '1.0'
typenum = '1.11.2'

[dev-dependencies.ark-std]
version = '^0.3.0'
default-features = false

[features]
default = [
    'std',
    'u64_backend',
]
std = ['curve25519-dalek/std', 'ark-bulletproofs-secq256k1/std', 'ark-std/std']
alloc = ['curve25519-dalek/alloc']
nightly = [
    'curve25519-dalek/nightly',
    'rand/nightly',
]
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
