[package]
name = 'noah-crypto'
version = '0.4.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
license = 'BUSL-1.1'
description = 'Noah Cryptographic Primitives and Protocols'

[lib]
name = 'noah_crypto'
crate-type = ['rlib']

[dependencies]
aes = '0.8.1'
ctr = '0.9.1'
digest = '0.10'
itertools = '0.10.3'
merlin = '3.0'
rand_chacha = '0.3'
serde = '1.0'
serde_derive = '1.0'
sha2 = '0.10'
ruc = '1.0'
sha3 = { version = "0.10", default-features = false }

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.curve25519-dalek]
package = "noah-curve25519-dalek"
version = "4.0.0"
default-features = false
features = ['serde']

[dependencies.x25519-dalek]
package = "noah-x25519-dalek"
version = "4.0.0"

[dependencies.ed25519-dalek]
package = "noah-ed25519-dalek"
version = "4.0.0"

[dependencies.bulletproofs]
package = "noah-bulletproofs"
version = "4.0.0"

[dependencies.ark-ec]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-ff]
version = '0.4.0-alpha'
default-features = false
features = ['asm']

[dependencies.ark-ed25519]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-secp256k1]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-secq256k1]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-bulletproofs]
version = '4.0.0'
default-features = false
features = ['yoloproofs']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.rand]
version = '0.8'
default-features = false

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dev-dependencies]
bit-array = '0.4.3'
lazy_static = '1.4.0'
rmp-serde = '1.0.0'
serde_json = '1.0'
typenum = '1.11.2'

[dev-dependencies.ark-std]
version = '0.4.0-alpha'
default-features = false

[features]
default = [
    'std',
    'u64_backend',
]
std = [
    'curve25519-dalek/std',
    'ark-bulletproofs/std',
    'ark-std/std',
    'ark-ed25519/std',
    'ark-secp256k1/std',
    'ark-secq256k1/std'
]
alloc = ['curve25519-dalek/alloc']
nightly = [
    'curve25519-dalek/nightly',
    'rand/nightly',
]
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
print-trace = ['noah-algebra/print-trace']