[package]
name = "zei"
version = "0.0.1"
authors = ["efe"]
build = "build.rs"
exclude = ["artifacts.json", "index.node"]


[lib]
name = "zei"
crate-type = ["dylib"]


[dependencies]
bulletproofs = { path = "./bulletproofs" }
rand = "0.5"
blake2-rfc = "0.2"
curve25519-dalek = { version = "0.21", features = ["serde"] }
merlin = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
index-fixed = "0.3"
neon = "0.2.0"

[build-dependencies]
neon-build = "0.2.0"