[[bench]]
name = 'fft'
path = 'benches/fft.rs'
harness = false

[package]
name = 'zei-plonk'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Zei TurboPLONK protocol'

[lib]
name = 'zei_plonk'
crate-type = ['rlib']

[dependencies]
bincode = '1.3.1'
merlin = '3.0.0'
num-bigint = '0.4'
num-integer = '0.1.43'
serde_derive = '1.0.115'

[dependencies.rand_chacha]
version = '0.3'
default-features = false

[dependencies.zei-algebra]
path = '../algebra'

[dependencies.zei-crypto]
path = '../crypto'

[dependencies.serde]
version = '1.0.115'
features = ['derive']

[dev-dependencies]
serde_json = '1.0'
rand = "0.8"

[dev-dependencies.num-bigint]
version = '0.4'
features = ['rand']
