[[bench]]
name = 'fft'
path = 'benches/fft.rs'
harness = false

[package]
name = 'noah-plonk'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Noah TurboPLONK protocol'
build = "build.rs"

[lib]
name = 'noah_plonk'
crate-type = ['rlib']

[build-dependencies]
rustc_version = "0.4"

[dependencies]
bincode = '1.3.1'
criterion = { version = '0.4.0', default-features = false}
merlin = '3.0.0'
num-bigint = '0.4'
num-integer = '0.1.43'
serde_derive = '1.0.115'

[dependencies.ark-poly]
version = '^0.3.0'
default-features = false

[dependencies.ark-serialize]
version = '^0.3.0'
default-features = false

[dependencies.ark-std]
version = '^0.3.0'
default-features = false

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.rand_chacha]
version = '0.3'
default-features = false

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.noah-crypto]
path = '../crypto'

[dependencies.serde]
version = '1.0.115'
features = ['derive']

[dev-dependencies]
serde_json = '1.0'
rand = "0.8"

[dev-dependencies.num-bigint]
version = '0.4'
features = ['rand']

[features]
default = ["std"]
debug = []
std = ['ark-std/std']
parallel = ['rayon']