[package]
name = "poly-iops"
version = "0.1.4"
authors = ["Findora <engineering@findora.org>"]
edition = "2018"
description = "Zei PLONK Poly-IOP protocol"

[lib]
name = "poly_iops"
crate-type = ["rlib"]

[dependencies]
algebra = { package = "algebra", path = "../algebra" }

byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
crypto = { package = "crypto", path = "../crypto" }
custom_error="1.7.1"
itertools = "0.9.0"
merlin = "2.0.0"
num-bigint = { version = "0.3" }
num-integer = { version = "0.1.43" }
num-traits = { version = "0.2.12" }
rand = "0.7.3"
rand_chacha = "0.2.1"
rand_core = "0.5.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
utils = { path = "../utils" }
bincode = "1.3.1"
ruc = "1.0"

[dev-dependencies]
serde_json = "1.0"
