[package]
name = 'noah-smoke-tests'
version = '0.2.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
description = 'Noah smoke tests'

[dependencies.noah]
path = '../api'

[dependencies]
aes = '0.8.1'
aes-gcm = '0.10.1'
bincode = '1.3.1'
bulletproofs = { git = "https://github.com/FindoraNetwork/bulletproofs", tag = "v1.0.2-f"  }
digest = '0.10'
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek", tag = "v1.0.1-f" }
lazy_static = "1.4.0"
libsecp256k1 = '0.7'
linear-map = '1.2.0'
merlin = '3.0'
rand_chacha = '0.3'
rmp-serde = '1.0.0'
ruc = '1.0'
serde = '1.0'
serde_derive = '1.0'
serde_str = '0.1.0'
sha2 = '0.10'
sha3 = '0.10'

[dependencies.ark-serialize]
version = '^0.3.0'
default-features = false

[dependencies.noah-algebra]
path = '../algebra'

[dependencies.noah-crypto]
path = '../crypto'

[dependencies.noah-plonk]
path = '../plonk'

[dependencies.curve25519-dalek]
git = "https://github.com/FindoraNetwork/curve25519-dalek"
tag = "v3.2.0-f"
features = ['serde']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.structopt]
version = '0.3.26'
optional = true

[dev-dependencies]
bit-array = '0.4.3'
criterion = { version = '0.4.0', default-features = false}
hex = '0.4'
lazy_static = '1.4.0'
serde_json = '1.0'
typenum = '1.11.2'
parking_lot = '0.12'

[dependencies.ark-std]
version = '^0.3.0'
default-features = false

[dev-dependencies.noah-accumulators]
path = '../accumulators'

[dev-dependencies.rand]
version = '0.8'
default-features = false

[dev-dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v0.2.2'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v0.2.2'

[dependencies.ark-bulletproofs]
git = "https://github.com/FindoraNetwork/ark-bulletproofs"
tag = "v2.0.4-f"
default-features = false
features = ['yoloproofs']

[features]
default = [
    'std'
]
debug = [ 'noah-plonk/debug', 'noah/debug' ]
std = ['curve25519-dalek/std', 'noah/std', 'bulletproofs/std', 'ark-bulletproofs/std', 'ark-std/std']
parallel = [
    'default',
    'rayon',
    'noah/parallel',
    'noah-algebra/parallel',
    'noah-plonk/parallel'
]