[package]
name = 'noah-smoke-tests'
version = '0.4.0'
authors = ['Findora <engineering@findora.org>']
edition = '2021'
license = 'BUSL-1.1'
description = 'Noah smoke tests'

[dependencies]
aes = '0.8.1'
aes-gcm = '0.10.1'
bincode = '1.3.1'
digest = '0.10'
lazy_static = "1.4.0"
libsecp256k1 = '0.7'
linear-map = '1.2.0'
merlin = '3.0'
rand_chacha = '0.3'
rmp-serde = '1.0.0'
ruc = '1.0'
serde = '1.0'
serde_derive = '1.0'
serde_str = '0.1.0'
sha2 = '0.10'
sha3 = '0.10'

[dependencies.noah-api]
version = "0.4.0"

[dependencies.noah-algebra]
version = "0.4.0"

[dependencies.noah-crypto]
version = "0.4.0"

[dependencies.noah-plonk]
version = "0.4.0"

[dependencies.curve25519-dalek]
package = "noah-curve25519-dalek"
version = "4.0.0"
default-features = false
features = ['serde']

[dependencies.ed25519-dalek]
package = "noah-ed25519-dalek"
version = "4.0.0"

[dependencies.bulletproofs]
package = "noah-bulletproofs"
version = "4.0.0"

[dependencies.ark-serialize]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-std]
version = '0.4.0-alpha'
default-features = false

[dependencies.ark-bulletproofs]
version = '4.0.0'
default-features = false
features = ['yoloproofs']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.structopt]
version = '0.3.26'
optional = true

[dev-dependencies]
bit-array = '0.4.3'
criterion = { version = '0.4.0', default-features = false}
hex = '0.4'
lazy_static = '1.4.0'
serde_json = '1.0'
typenum = '1.11.2'
parking_lot = '0.12'

[dev-dependencies.noah-accumulators]
path = '../accumulators'

[dev-dependencies.storage]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.4'

[dev-dependencies.mem_db]
git = 'https://github.com/FindoraNetwork/storage.git'
tag = 'v1.1.4'

[dev-dependencies.rand]
version = '0.8'
default-features = false

[features]
default = [
    'std'
]
debug = [ 'noah-plonk/debug', 'noah-api/debug' ]
std = ['curve25519-dalek/std', 'noah-api/std', 'bulletproofs/std', 'ark-bulletproofs/std', 'ark-std/std']
parallel = [
    'default',
    'rayon',
    'noah-api/parallel',
    'noah-algebra/parallel',
    'noah-plonk/parallel'
]