[package]
name = "zei_utilities"
version = "0.0.2"
authors = ["fernando@findora.org, philippe@findora.org"]
edition = "2018"
description = "Utilities for Zei tests and benchmarks"


[dependencies]
zei = {path = ".."}
rand = { version = "0.7", default-features = false}
rand_chacha = "0.2"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
itertools = "0.8.0"
criterion = "0.3.1"
criterion-cycles-per-byte = "0.1.1"
bulletproofs = { version = "2.0.0",  package = "bulletproofs", git = "ssh://git@github.com/findoraorg/bulletproofs", branch = "develop", features = ["yoloproofs"]}

