[package]
name = "utils"
version = "0.1.0"
authors = ["Findora <engineering@findora.org>"]
edition = "2018"
description = "Zei utility functions"

[lib]
name = "utils"
crate-type = ["rlib"]

[dependencies]
base64 = "0.10"
bulletproofs = { package = "bulletproofs", git = "ssh://git@github.com/FindoraNetwork/bp", branch = "feat-use-stable", features = ["yoloproofs"] }
curve25519-dalek = { version =  "3.0.0", features = ["serde"] }
x25519-dalek = "0.6"
serde = "1.0"
digest = "0.9"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
